--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a href="index.html" class="navbar-brand ml-lg-3">
             <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>Algabbary</h1>
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
@@ -239,9 +239,9 @@
                     <i class="fa fa-2x fa-plane text-dark pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">الشحن الجوي</h6>
                 </div>
-                <p>نقدم خدمات الشحن الجوي السريعة والموثوقة إلى جميع أنحاء العالم. نحن متخصصون في توفير حلول شحن جوية متميزة تلبي احتياجات عملائنا العاجلة والآمنة.</p>
+                <p >نقدم خدمات الشحن الجوي السريعة والموثوقة إلى جميع أنحاء العالم. نحن متخصصون في توفير حلول شحن جوية متميزة تلبي احتياجات عملائنا العاجلة والآمنة.</p>
                 <!-- New "Call Now" Button -->
-                <a class="btn btn-dark text-white" href="tel:0560495839">اتصل الآن</a>
+                <a class="btn btn-dark text-white" href="tel:0560495839" >اتصل الآن</a>
             </div>
 
             <!-- Service 2: Ocean Freight -->
