--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="شركة الغباري رائدة في خدمات الشحن البري والبحري والجوي في السعودية ودول الخليج. نقدم حلول لوجستية متكاملة وآمنة بأفضل الأسعار مع خبرة 25 عاماً في مجال النقل والشحن.">
-    <meta name="keywords" content="شركة شحن سعودية, شحن بري, شحن بحري, شحن جوي, خدمات لوجستية, نقل بضائع, شحن دولي, الغباري للشحن, شركات الشحن في السعودية, أفضل شركة شحن">
+    <meta name="keywords" content=" , الرياض , الشحن , النقل ,المملكه , مدينة الرياض شركة شحن سعودية, شحن بري, شحن بحري, شحن جوي, خدمات لوجستية, نقل بضائع, شحن دولي, الغباري للشحن, شركات الشحن في السعودية, أفضل شركة شحن">
     <meta name="author" content="شركة الغباري للشحن">
     <meta name="robots" content="index, follow">
     <meta name="language" content="ar">
