--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 <div class="col-md-6 mb-5">
                     <h3 class="text-primary mb-4">اتصل بنا</h3>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>السعوديه الرياض  الخالديه شارع الامير محمد بن عبد الرحمن </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+966 560495839</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>0560495839</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@ghabari.com</p>
 
                 </div>
