--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="row py-2 px-lg-5">
         <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
             <div class="d-inline-flex align-items-center text-white">
-                <small><i class="fa fa-phone-alt mr-2"></i><a href="tel:0560495839" class="text-white">+966 560 495 839</a></small>
+                <small><i class="fa fa-phone-alt mr-2"></i><a href="tel:0560495839" class="text-white">0560 495 839</a></small>
                 <small class="px-3">|</small>
                 <small><i class="fa fa-envelope mr-2"></i><a href="mailto:info@algabbary.com" class="text-white">info@algabbary.com</a></small>
             </div>
