--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <!-- Service 1: Air Freight -->
             <div class="col-lg-3 col-md-6 text-center mb-5">
                 <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                    <i class="fa fa-2x fa-plane text-dark pr-3"></i>
+                    <i class="fa fa-2x fa-plane text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">الشحن الجوي</h6>
                 </div>
                 <p >نقدم خدمات الشحن الجوي السريعة والموثوقة إلى جميع أنحاء العالم. نحن متخصصون في توفير حلول شحن جوية متميزة تلبي احتياجات عملائنا العاجلة والآمنة.</p>
@@ -252,7 +252,7 @@
             <!-- Service 2: Ocean Freight -->
             <div class="col-lg-3 col-md-6 text-center mb-5">
                 <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                    <i class="fa fa-2x fa-ship text-dark pr-3"></i>
+                    <i class="fa fa-2x fa-ship text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">الشحن البحري</h6>
                 </div>
                 <p>توفر شركة الغُباري للشحن حلول شحن بحرية دولية إلى دول مجلس التعاون الخليجي، أمريكا الشمالية، وأوروبا. نحن نضمن لك سرعة وأمان في نقل البضائع عبر البحر.</p>
@@ -263,7 +263,7 @@
             <!-- Service 3: Land Transport -->
             <div class="col-lg-3 col-md-6 text-center mb-5">
                 <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                    <i class="fa fa-2x fa-truck text-dark pr-3"></i>
+                    <i class="fa fa-2x fa-truck text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">النقل البري</h6>
                 </div>
                 <p>خدمات النقل البري من وإلى جميع مدن المملكة العربية السعودية مثل الرياض، جدة، مكة، الدمام وغيرها. نحن نقدم حلولًا مرنة وآمنة لنقل البضائع عبر الطرق البرية.</p>
@@ -274,7 +274,7 @@
             <!-- Service 4: Cargo Storage -->
             <div class="col-lg-3 col-md-6 text-center mb-5">
                 <div class="d-flex align-items-center justify-content-center bg-primary mb-4 p-4">
-                    <i class="fa fa-2x fa-warehouse text-dark pr-3"></i>
+                    <i class="fa fa-2x fa-warehouse text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">تخزين الشحنات</h6>
                 </div>
                 <p>نقدم خدمات تخزين شحناتك بشكل آمن في مرافقنا الحديثة والمعتمدة، مع ضمان الوصول السهل والسريع إلى الشحنات عند الحاجة. خدماتنا تشمل التخزين القصير والطويل الأجل.</p>
