--- a/index.html
+++ b/index.html
@@ -718,6 +718,15 @@
 
 
 
+<!-- WhatsApp Button -->
+<a href="https://wa.me/0560495839" class="btn btn-success btn-lg floating-btn whatsapp-btn" target="_blank" title="تواصل عبر واتساب">
+    <i class="fab fa-whatsapp p-0"></i>
+</a>
+
+<!-- Call Button -->
+<a href="tel:+966560495839" class="btn btn-primary btn-lg floating-btn call-btn" target="_blank" title="اتصل بنا">
+    <i class="fas fa-phone-alt p-0"></i>
+</a>
 
 
     <!-- JavaScript Libraries -->
