--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <div class="card-body text-center">
                         <i class="fa fa-truck fa-3x text-primary mb-3"></i>
                         <h5 class="card-title">الشحن البري</h5>
-                        <p class="card-text">نحن نقدم خدمات شحن بري فعالة وموثوقة لجميع المدن داخل المملكة العربية السعودية. خدماتنا تشمل النقل من الرياض إلى مكة، جدة، الدمام وغيرها.</p>
+                        <p class="card-text">نحن نقدم خدمات شحن بري فعالة وموثوقة لجميع المدن داخل المملكة العربية السعودية. خدماتنا تشمل النقل   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساء .</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                     <div class="card-body text-center">
                         <i class="fa fa-ship fa-3x text-primary mb-3"></i>
                         <h5 class="card-title">الشحن البحري</h5>
-                        <p class="card-text">نحن نقدم حلول شحن بحرية دولية تتسم بالموثوقية والأمان، حيث نغطي طرق الشحن من السعودية إلى دول مجلس التعاون الخليجي، والمغرب، ومصر، وأكثر.</p>
+                        <p class="card-text">نحن نقدم حلول شحن بحرية دولية تتسم بالموثوقية والأمان، حيث نغطي طرق الشحن من السعودية إلى  والمغرب، و   وأكثر.</p>
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                     <i class="fa fa-2x fa-ship text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">الشحن البحري</h6>
                 </div>
-                <p>توفر شركة الغُباري للشحن حلول شحن بحرية دولية إلى دول مجلس التعاون الخليجي، أمريكا الشمالية، وأوروبا. نحن نضمن لك سرعة وأمان في نقل البضائع عبر البحر.</p>
+                <p>توفر شركة الغُباري للشحن حلول شحن بحرية دولية إلى  أمريكا الشمالية، وأوروبا. نحن نضمن لك سرعة وأمان في نقل البضائع عبر البحر.</p>
                 <!-- New "Call Now" Button -->
                 <a class="btn btn-dark text-white" href="tel:0560495839">اتصل الآن</a>
             </div>
@@ -266,7 +266,7 @@
                     <i class="fa fa-2x fa-truck text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">النقل البري</h6>
                 </div>
-                <p>خدمات النقل البري من وإلى جميع مدن المملكة العربية السعودية مثل الرياض، جدة، مكة، الدمام وغيرها. نحن نقدم حلولًا مرنة وآمنة لنقل البضائع عبر الطرق البرية.</p>
+                <p>خدمات النقل البري   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساء . نحن نقدم حلولًا مرنة وآمنة لنقل البضائع عبر الطرق البرية.</p>
                 <!-- New "Call Now" Button -->
                 <a class="btn btn-dark text-white" href="tel:0560495839">اتصل الآن</a>
             </div>
@@ -458,7 +458,7 @@
             <div class="col-lg-6 mb-4">
                 <div class="bg-light p-4 border rounded">
                     <h5 class="font-weight-bold"><i class="fas fa-globe text-primary mr-2"></i>ما هي المناطق التي تغطيها شركة الغباري؟</h5>
-                    <p>نحن نقدم خدمات الشحن في المملكة العربية السعودية وكذلك في دول مجلس التعاون الخليجي (قطر، الإمارات، عمان، البحرين)، بالإضافة إلى العديد من الدول العربية مثل مصر، المغرب، السودان، كينيا، وبعض الدول الأوروبية وأمريكا الشمالية.</p>
+                    <p>نحن نقدم خدمات الشحن في المملكة العربية السعودية وكذلك في دول مجلس التعاون الخليجي (قطر، الإمارات، عمان، البحرين)، بالإضافة إلى العديد من الدول العربية مثل    المغرب،   ، كينيا، وبعض الدول الأوروبية وأمريكا الشمالية.</p>
                 </div>
             </div>
             <div class="col-lg-6 mb-4">
