--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div class="card-body text-center">
                         <i class="fa fa-plane fa-3x text-primary mb-3"></i>
                         <h5 class="card-title">الشحن الجوي</h5>
-                        <p class="card-text">خدمات الشحن الجوي هي الخيار الأسرع لنقل البضائع من وإلى السعودية، حيث نغطي رحلات الشحن إلى أمريكا الشمالية، دول الاتحاد الأوروبي، وبريطانيا.</p>
+                        <p class="card-text">خدمات الشحن الجوي هي الخيار الأسرع لنقل البضائع من وإلى السعودية، حيث نغطي رحلات الشحن   إلى أمريكا الشمالية، دول الاتحاد الأوروبي، وبريطانيا و المغرب و الجزائر.</p>
                     </div>
                 </div>
             </div>
@@ -524,31 +524,7 @@
         </div>
         <div class="row">
             <!-- Card 1 -->
-            <div class="col-md-6 mb-5">
-                <div class="position-relative">
-                    <img class="img-fluid w-100" src="img/blog-2.avif" alt="">
-                    <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center rounded-circle"
-                        style="width: 60px; height: 60px; bottom: -30px; right: 30px;">
-                        <h4 class="font-weight-bold mb-n1">01</h4>
-                        <small class="text-white text-uppercase">يناير</small>
-                    </div>
-                </div>
-                <div class="bg-secondary" style="padding: 30px;">
-                    <div class="d-flex mb-3">
-                        <div class="d-flex align-items-center">
-                            <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/user.avif" alt="">
-                            <a class="text-muted ml-2" href="">أحمد علي</a>
-                        </div>
-                        <div class="d-flex align-items-center ml-4">
-                            <i class="far fa-bookmark text-primary"></i>
-                            <a class="text-muted ml-2" href="">تصميم المواقع</a>
-                        </div>
-                    </div>
-                    <h4 class="font-weight-bold mb-3">أحدث تقنيات تصميم المواقع لعام 2024</h4>
-                    <p>تعرف على أحدث الاتجاهات في مجال تصميم المواقع وكيفية الاستفادة منها لتحسين تجربة المستخدم. في هذا المقال، نتناول الأساليب المتقدمة في تصميم الواجهات.</p>
-                    <a class="border-bottom border-primary text-uppercase text-decoration-none" href="">اقرأ المزيد <i class="fa fa-angle-right"></i></a>
-                </div>
-            </div>
+
             <!-- Card 2 -->
             <div class="col-md-6 mb-5">
                 <div class="position-relative">
@@ -563,7 +539,7 @@
                     <div class="d-flex mb-3">
                         <div class="d-flex align-items-center">
                             <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/user.avif" alt="">
-                            <a class="text-muted ml-2" href="">مريم مصطفى</a>
+                            <a class="text-muted ml-2" href="">حسن مصطفى</a>
                         </div>
                         <div class="d-flex align-items-center ml-4">
                             <i class="far fa-bookmark text-primary"></i>
@@ -619,7 +595,6 @@
                         </div>
                         <div class="d-flex align-items-center ml-4">
                             <i class="far fa-bookmark text-primary"></i>
-                            <a class="text-muted ml-2" href="">التكنولوجيا</a>
                         </div>
                     </div>
                     <h4 class="font-weight-bold mb-3">أهمية استخدام الذكاء الاصطناعي في الأعمال التجارية</h4>
