modify services cards

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="card-body text-center">
                         <i class="fa fa-truck fa-3x text-primary mb-3"></i>
                         <h5 class="card-title">الشحن البري</h5>
-                        <p class="card-text">نحن نقدم خدمات شحن بري فعالة وموثوقة لجميع المدن داخل المملكة العربية السعودية. خدماتنا تشمل النقل   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساء .</p>
+                        <p class="card-text">نحن نقدم خدمات شحن بري فعالة وموثوقة لجميع المدن داخل المملكة العربية السعودية. خدماتنا تشمل النقل   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساءو مجلس التعاون الخليجي و الاردن و لبنان  .</p>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                     <i class="fa fa-2x fa-ship text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">الشحن البحري</h6>
                 </div>
-                <p>توفر شركة الغُباري للشحن حلول شحن بحرية دولية إلى  أمريكا الشمالية، وأوروبا. نحن نضمن لك سرعة وأمان في نقل البضائع عبر البحر.</p>
+                <p>توفر شركة الغُباري للشحن حلول شحن بحرية دولية إلى  أمريكا الشمالية، وأوروبا و الفلبين و سريلانكا. نحن نضمن لك سرعة وأمان في نقل البضائع عبر البحر.</p>
                 <!-- New "Call Now" Button -->
                 <a class="btn btn-dark text-white" href="tel:0560495839">اتصل الآن</a>
             </div>
@@ -248,7 +248,7 @@
                     <i class="fa fa-2x fa-truck text-white pr-3"></i>
                     <h6 class="text-white font-weight-medium m-0">النقل البري</h6>
                 </div>
-                <p>خدمات النقل البري   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساء . نحن نقدم حلولًا مرنة وآمنة لنقل البضائع عبر الطرق البرية.</p>
+                <p>خدمات النقل البري   من الرياض الي     مكة  المدينة جدة الطايف تبوك جازان نجران خميس مشيط حفر الباطن ابها الدمام الاحساء و مجلس التعاون الخليجي و الاردن و لبنان . نحن نقدم حلولًا مرنة وآمنة لنقل البضائع عبر الطرق البرية.</p>
                 <!-- New "Call Now" Button -->
                 <a class="btn btn-dark text-white" href="tel:0560495839">اتصل الآن</a>
             </div>
@@ -320,6 +320,7 @@
                         <p>خدمات توصيل من الباب إلى الباب</p>
                         <p>شحنات مضمونة ومع ضمان سلامة البضائع</p>
                         <p>أعلى مستويات الكفاءة في إدارة الشحنات</p>
+                        <p>نقل الى مجلس التعاون الخليجي و الاردن و لبنان</p>
                     </div>
                 </div>
             </div>
@@ -336,6 +337,7 @@
                         <p>خيارات متعددة للسفن والحاويات</p>
                         <p>نقل الحمولات الثقيلة والبضائع السائبة</p>
                         <p>تسليم دقيق وآمن إلى جميع الوجهات العالمية</p>
+                        
                     </div>
                 </div>
             </div>
