change footer color

--- a/index.html
+++ b/index.html
@@ -618,9 +618,9 @@
             <div class="row">
                 <div class="col-md-6 mb-5">
                     <h3 class="text-primary mb-4">اتصل بنا</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>السعوديه الرياض  الخالديه شارع الامير محمد بن عبد الرحمن </p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>0560495839</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@ghabari.com</p>
+                    <p class="text-white"><i class="fa fa-map-marker-alt mr-2"></i>السعوديه الرياض  الخالديه شارع الامير محمد بن عبد الرحمن </p>
+                    <p class="text-white"><i class="fa fa-phone-alt mr-2"></i>0560495839</p>
+                    <p class="text-white"><i class="fa fa-envelope mr-2"></i>info@ghabari.com</p>
 
                 </div>
                 <div class="col-md-6 mb-5">
@@ -648,7 +648,7 @@
             </p>
         </div>
         
-        <div class="col-lg-6 text-center text-md-right">
+        <div class="col-lg-6 text-center text-md-right text-white">
             <ul class="nav d-inline-flex">
                 <li class="nav-item">
                     <a class="nav-link text-white py-0" href="#">الخصوصية</a>
