add whatsapp number

--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 
 
 <!-- WhatsApp Button -->
-<a href="https://wa.me/0560495839" class="btn btn-success btn-lg floating-btn whatsapp-btn" target="_blank" title="تواصل عبر واتساب">
+<a href="https://wa.me/+966560495839" class="btn btn-success btn-lg floating-btn whatsapp-btn" target="_blank" title="تواصل عبر واتساب">
     <i class="fab fa-whatsapp p-0"></i>
 </a>
 
